# ProgressBarAndTesting

./: CMakeLists.txt  FilesQueue.h  GUIFrame.cpp  GUIFrame.h  Observer.h  ProgBarApp.cpp  ProgBarApp.h  ProgBarMain.cpp  ProgBarMain.h  ProgressBar.cpp  ProgressBar.h  README.md  ResourceFile.h  Subject.h  WxWizFrame.fbp
